--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	},
 	"dependencies": {
 		"@langchain/core": "^0.3.49",
-		"@langchain/ollama": "^0.2.0"
+		"@langchain/ollama": "^0.2.0",
+		"browser-image-compression": "^2.0.2"
 	}
 }
